添加登陆功能

--- a/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.ASPNetCoreSample/appsettings.json
+++ b/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.ASPNetCoreSample/appsettings.json
@@ -4,5 +4,11 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+
+  "CrabyterDbApi": {
+    "Endpoint": "http://121.41.51.49/api2/",
+    "AccountName": "ApiTestAccount",
+    "Key": "3F29E42D-77C8-464B-B262-514ADFB7D4A9"
   }
 }
