--- a/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.csproj
+++ b/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb/Sinyoo.CrabyterDb.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp1.1;net461;netstandard1.6</TargetFrameworks>
+    <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
